content d has been aligned attempting to resolve sign up issue in content d

--- a/style.css
+++ b/style.css
@@ -157,14 +157,28 @@ font-size: 32px;
     flex-direction: column;
     align-self: flex-end;
 }
+.content-d{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.d-contain{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.d-l-contain{
+    display: flex;
+    flex-direction: column;
+}
 /* apply to all*/
 img{
     width: 350px;
     height: 350px;
-}
-img {
     border: 5px solid #faf1cf;
-  }
+}
+
 button {
     padding: 8px 16px;
     border-radius: 8px;
